gcc/testsuite/g++.dg/init/brace3.C
int array[2][1] = { {0} {1} }; // { dg-error "" }
